--- a/Haiku/haiku.css
+++ b/Haiku/haiku.css
@@ -175,10 +175,10 @@ input.sheet-type-selector[value="character"]:checked ~ span::before {
 	content: "Character Mode";
 }
 input.sheet-type-selector[value="ship"]:checked ~ span::before {
-	content: "Ship Mode";
+	content: "Legacy Mode";
 }
 input.sheet-type-selector[value="faction"]:checked ~ span::before {
-	content: "Faction Mode";
+	content: "Team Mode";
 }
 
 /* SETTINGS */
@@ -372,6 +372,7 @@ input.sheet-type-selector[value="faction"]:checked ~ span::before {
 }
 /* AUTO-EXPAND */
 .sheet-auto-expand {
+	text-overflow: ellipsis;
 	position: relative;
 	cursor: text;
 	word-wrap: break-word;
@@ -460,6 +461,12 @@ textarea.sheet-label {
 	padding: 3px 5px;
 	margin-bottom: 5px;
 	font-size: .9em;
+	line-height: 1;
+}
+.sheet-legacy-rules {
+	padding: 3px 5px;
+	margin-bottom: 5px;
+	font-size: 1em;
 	line-height: 1;
 }
 .sheet-planningdesc {
@@ -714,6 +721,9 @@ input.sheet-playbook-title {
 	padding-right: 2.5%;
 }
 .sheet-header .sheet-col40 {
+	padding-right: 2.5%;
+}
+.sheet-header .sheet-col30 {
 	padding-right: 2.5%;
 }
 .sheet-header .sheet-col0 {
@@ -1673,7 +1683,6 @@ input.sheet-friendup {
 	margin-bottom: 10px;
 }
 .sheet-ship-system .sheet-blackheader input[type=text] {
-	width: 70px;
 	font: inherit;
 	color: inherit;
 	letter-spacing: inherit;
@@ -1896,7 +1905,7 @@ input.sheet-expand:not(:checked) ~ textarea {
 	background-image: url("https://github.com/Jabberer/Constellations-On-The-Court/blob/master/bg-action.png?raw=true");
 }
 .sheet-rolltemplate-bitd .sheet-roll-resist {
-	background-image: url("https://raw.githubusercontent.com/roll20/roll20-character-sheets/master/Scum%20-%20Villainy/Assets/rolltemplate/bg-resist.png");
+	background-image: url("https://github.com/Jabberer/Constellations-On-The-Court/blob/master/Haiku/assets/bg-resist.png?raw=true");
 }
 .sheet-rolltemplate-bitd .sheet-roll-vice {
 	background-image: url("https://raw.githubusercontent.com/roll20/roll20-character-sheets/master/Scum%20-%20Villainy/Assets/rolltemplate/bg-vice.png");
@@ -1941,7 +1950,7 @@ input.sheet-expand:not(:checked) ~ textarea {
 	font-weight: 800;
 }
 .sheet-rolltemplate-bitd .sheet-roll-resist .sheet-roll-name {
-	color: #8da8bb;
+	color: crimson;
 	font-size: 91%;
 }
 .sheet-rolltemplate-bitd .sheet-roll-vice .sheet-roll-name {
@@ -1982,18 +1991,18 @@ input.sheet-expand:not(:checked) ~ textarea {
 	font-size: 103%;
 }
 .sheet-rolltemplate-bitd .sheet-roll-action .sheet-zerodice1 {
-	text-shadow: 0 0 6px rgb(255, 158, 0);
-	color: #ffffff;
+	text-shadow: 0 0 6px crimson;
+	color: black;
 }
 .sheet-rolltemplate-bitd .sheet-roll-fortune .sheet-zerodice1 {
-	text-shadow: 0 0 6px rgb(136, 219, 215);
+	text-shadow: 0 0 6px crimson;
 	color: #1e1e1e;
 }
 .sheet-rolltemplate-bitd .sheet-roll-vice .sheet-zerodice1,
 .sheet-rolltemplate-bitd .sheet-roll-resist .sheet-zerodice1 {
 	font-family: sans-serif;
-	text-shadow: 0 0 6px rgb(9, 199, 208);
-	color: #ffffff;
+	text-shadow: 0 0 6px crimson;
+	color: black;
 }
 
 /* Zerodice text */
@@ -2008,18 +2017,18 @@ input.sheet-expand:not(:checked) ~ textarea {
 .sheet-rolltemplate-bitd .sheet-roll-vice .sheet-zerodice2,
 .sheet-rolltemplate-bitd .sheet-roll-resist .sheet-zerodice2 {
 	padding-top: 8px;
-	text-shadow: 0 0 6px rgb(9, 199, 208);
-	color: #d8e4ef;
+	text-shadow: 0 0 6px crimson;
+	color: black;
 }
 .sheet-rolltemplate-bitd .sheet-roll-action .sheet-zerodice2 {
 	padding-top: 11px;
-	text-shadow: 0 0 6px rgb(255, 158, 0);
-	color: #ffd8ca;
+	text-shadow: 0 0 6px crimson;
+	color:black;
 }
 .sheet-rolltemplate-bitd .sheet-roll-fortune .sheet-zerodice2 {
 	width: 60%;
 	padding-top: 11px;
-	text-shadow: 0 0 6px rgb(136, 219, 215);
+	text-shadow: 0 0 6px crimson;
 	color: #1e1e1e;
 }
 
@@ -2057,7 +2066,7 @@ input.sheet-expand:not(:checked) ~ textarea {
 	font-family: Tahoma, Gadget, sans-serif;
 	text-transform: uppercase;
 	font-size: 91%;
-	color: #8da8bb;
+	color: crimson;
 }
 .sheet-rolltemplate-bitd .sheet-roll-vice .sheet-roll-subtitle {
 	font-family: sans-serif;
@@ -2098,12 +2107,12 @@ input.sheet-expand:not(:checked) ~ textarea {
 	font-family: Tahoma, Gadget, sans-serif;
 	text-transform: uppercase;
 	height: 27px;
-	font-size: 150%;
+	font-size: 135%;
 	letter-spacing: 0;
 	font-weight: bold;
 	line-height: 20px;
 	padding: 41px 30px 20px;
-	text-shadow: 0 0 2px black;
+	text-shadow: 0 0 6px crimson;
 	color: black;
 }
 .sheet-rolltemplate-bitd .sheet-roll-resist .sheet-roll-dice,
