--- a/Haiku/haiku.css
+++ b/Haiku/haiku.css
@@ -158,7 +158,7 @@ input.sheet-type-selector {
 span.sheet-type-selector {
 	border: solid 1px black;
 	text-align: center;
-	background: #102536;
+	background: #E8E8E8;
 	color: black;
 	text-shadow: none !important;
 	width: 170px;
@@ -564,8 +564,8 @@ textarea.sheet-label {
 
 /* LOGO */
 .sheet-scumlogo {
-	height: 50px;
-	background-image: url("https://raw.githubusercontent.com/roll20/roll20-character-sheets/master/Scum%20-%20Villainy/Assets/logo.png");
+	height: 70px;
+	background-image: url("https://github.com/Jabberer/Constellations-On-The-Court/blob/master/Haiku/assets/logo.png?raw=true");
 	background-size: 95% auto;
 	background-repeat: no-repeat;
 }
@@ -1036,7 +1036,7 @@ input.sheet-tooth:checked ~ input.sheet-regulartooth + span {
 input.sheet-xptooth + span,
 input.sheet-modtooth + span,
 input.sheet-checktooth:checked + span {
-	background-color: black;
+	background-color: cyan;
 }
 input.sheet-regulartooth[type=radio] + span {
 	background-color: #e34a3a;
@@ -1061,7 +1061,7 @@ input.sheet-zero + span {
 	box-sizing: border-box;
 	vertical-align: top;
 	border: 1px solid black;
-	background: black;
+	background: cyan;
 	border-radius: 50%;
 	position: relative;
 }
@@ -1072,6 +1072,9 @@ input.sheet-zero + span::before, input.sheet-zero + span::after {
 	left: 0;
 	background: black;
 	height: 11px;
+}
+.sheet-margin-right{
+	margin-right: 2px;
 }
 input.sheet-zero + span::after {
 	transform: translate(4px,-1px) rotate(135deg);
@@ -1394,6 +1397,7 @@ input.sheet-radiobox:hover + span {
 	width: 53px;
 }
 .sheet-stress2 {
+	margin-left: auto;
 	padding-left: 10px;
 	position: relative;
 }
